[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/MissionTile.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/MissionChoice.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 12.0
bg_color = Color( 0, 0.25098, 0.501961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.6, 0.6, 1, 1 )
corner_radius_top_right = 8
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.25098, 0.501961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.6, 0.6, 1, 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="MissionChoice" type="VBoxContainer"]
margin_right = 500.0
margin_bottom = 135.0
custom_constants/separation = -4
script = ExtResource( 3 )

[node name="Header" type="Label" parent="."]
margin_right = 114.0
margin_bottom = 32.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "Operator"

[node name="Body" type="PanelContainer" parent="."]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 338.0
custom_styles/panel = SubResource( 5 )

[node name="List" type="VBoxContainer" parent="Body"]
margin_left = 8.0
margin_top = 8.0
margin_right = 492.0
margin_bottom = 302.0

[node name="Label" type="Label" parent="Body/List"]
margin_right = 484.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Select next mission!"
align = 1

[node name="MissionTile" parent="Body/List" instance=ExtResource( 2 )]
margin_top = 52.0
margin_right = 484.0
margin_bottom = 130.0

[node name="MissionTile2" parent="Body/List" instance=ExtResource( 2 )]
margin_top = 134.0
margin_right = 484.0
margin_bottom = 212.0

[node name="MissionTile3" parent="Body/List" instance=ExtResource( 2 )]
margin_top = 216.0
margin_right = 484.0
margin_bottom = 294.0

[connection signal="gui_input" from="Body/List/MissionTile" to="." method="_on_MissionTile_gui_input"]
[connection signal="gui_input" from="Body/List/MissionTile2" to="." method="_on_MissionTile2_gui_input"]
[connection signal="gui_input" from="Body/List/MissionTile3" to="." method="_on_MissionTile3_gui_input"]
